# credit-decision-support-system

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/static/: style.css
app/templates/: bulk.html  index.html  result_single.html  results.html  single.html
data/processed/: demo_high_risk_batch_100.csv  demo_low_risk_batch_100.csv  demo_small_mixed_50.csv  with_flag_demo_random_1000.csv
data/processed/files2 without approved flag/: demo_high_risk_batch_100.csv  demo_low_risk_batch_100.csv  demo_random_1000.csv  demo_small_mixed_50.csv
models/: label_encoder.pkl  xgb_cibil_quick.pkl  xgb_pipeline.pkl  xgb_quick.pkl
notebooks/: 01_Data_Preprocessing_and_Model_Training.ipynb  quick_credit_assessment.html  quick_credit_score.ipynb  sample_head.csv, index=False  single_model.ipynb
outputs/: latest_bulk_results.csv
