[project]
name = "mini-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "shap>=0.51.0",
    "uvicorn>=0.50.0",
    "xgboost>=3.2.0",
]
